@@ -4,13 +4,16 @@ import com.github.vlsi.gradle.properties.dsl.props
 
 plugins {
     `java-library`
+    `module-info-compile`
     id("com.github.vlsi.crlf")
 }
 
 dependencies {
     api(projects.darklafTheme)
     api(projects.darklafPropertyLoader)
+    api(projects.darklafIconset)
     api(projects.darklafUtils)
+    implementation(projects.darklafCompatibility)
     implementation(projects.darklafNativeUtils)
     implementation(projects.darklafPlatformBase)
     implementation(projects.darklafWindows)
@@ -20,18 +23,50 @@ dependencies {
 
     compileOnly(libs.nullabilityAnnotations)
     compileOnly(libs.swingx)
+    compileOnly(libs.tools.errorprone.annotations)
+    compileOnly(libs.autoservice.annotations)
+    annotationProcessor(libs.autoservice.processor)
 
-    testImplementation(libs.jna)
     testImplementation(libs.svgSalamander)
     testImplementation(libs.bundles.test.miglayout)
     testImplementation(libs.swingx)
+    testImplementation(libs.test.swingDslInspector)
+    testImplementation(libs.test.jna)
     testImplementation(libs.test.rsyntaxtextarea)
     testImplementation(libs.test.lGoodDatePicker)
     testImplementation(libs.test.junit.api)
     testRuntimeOnly(libs.test.junit.engine)
+    testCompileOnly(libs.nullabilityAnnotations)
+}
 
-    compileOnly(libs.autoservice.annotations)
-    annotationProcessor(libs.autoservice.processor)
+fun JavaForkOptions.patchTestExecParams() {
+    if (!JavaVersion.current().isJava9Compatible || props.bool("skipModuleInfo")) return
+    val patchFiles = sourceSets.test.get().output.classesDirs +
+        sourceSets.test.get().resources.sourceDirectories +
+        sourceSets.main.get().resources.sourceDirectories
+    val resourceDir = sourceSets.test.get().resources.sourceDirectories.singleFile
+    val testPackages = sourceSets.test.get().resources.asSequence().map { it.parentFile }.toSet().asSequence().map {
+        it.relativeTo(resourceDir).toPath().joinToString(separator = ".")
+    }.filter { it.isNotEmpty() }
+    jvmArgs(
+        "--module-path", (sourceSets.test.get().runtimeClasspath - patchFiles).asPath,
+        "--patch-module", "darklaf.core=${patchFiles.asPath}",
+        "--add-modules", "ALL-MODULE-PATH",
+        "--add-reads", "darklaf.core=org.junit.jupiter.api"
+    )
+    jvmArgs(
+        "--add-exports", "java.desktop/com.sun.java.swing=darklaf.core",
+        "--add-exports", "org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED",
+        "--add-exports", "org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED",
+    )
+    jvmArgs(
+        "--add-opens", "darklaf.core/com.github.weisj.darklaf.core.test=org.junit.platform.commons"
+    )
+    testPackages.forEach {
+        jvmArgs(
+            "--add-opens", "darklaf.core/$it=darklaf.properties"
+        )
+    }
 }
 
 tasks.test {
@@ -40,6 +75,7 @@ tasks.test {
         workingDir.mkdirs()
     }
     useJUnitPlatform()
+    patchTestExecParams()
     val verboseTest by props(false)
     if (!verboseTest) {
         exclude("**/DemoTest*")
@@ -70,7 +106,7 @@ val makeDocumentation by tasks.registering(JavaExec::class) {
 
     workingDir = File(project.rootDir, "build")
     workingDir.mkdirs()
-    main = "com.github.weisj.darklaf.documentation.CreateUITable"
+    main = "com.github.weisj.darklaf.core.documentation.CreateUITable"
     classpath(sourceSets.main.get().runtimeClasspath, sourceSets.test.get().runtimeClasspath)
 }
 
@@ -88,9 +124,11 @@ abstract class DemoTask : JavaExec() {
 
 val runDemo by tasks.registering(DemoTask::class) {
     group = LifecycleBasePlugin.VERIFICATION_GROUP
-    description = "Launches demo (e.g. com.github.weisj.darklaf.ui.table.TableDemo, com.github.weisj.darklaf.ui.button.ButtonDemo, ...)"
+    description =
+        "Launches demo (e.g. com.github.weisj.darklaf.ui.table.TableDemo, com.github.weisj.darklaf.ui.button.ButtonDemo, ...)"
 
-    classpath(sourceSets.test.map { it.runtimeClasspath })
+    dependsOn(tasks.compileJava, tasks.compileTestJava)
+    patchTestExecParams()
 
     // Pass the property to the demo
     // By default JavaExec is executed in its own JVM with its own properties
